updated docs, updated DES results with correct sompz

--- a/docs/applications/kids-1000.rst
+++ b/docs/applications/kids-1000.rst
@@ -93,9 +93,9 @@ We choose to include all the necessary correction factors. The multiplicative sh
         mask_r = ((z_bins[lens_bin] <= table_r['z']) &
                   (table_r['z'] < z_bins[lens_bin + 1]))
 
-        kwargs = {'return_table': True,
-                  'scalar_shear_response_correction': True,
-                  'random_subtraction': True, 'table_r': table_r[mask_r]}
+        kwargs = dict(return_table=True,
+                      scalar_shear_response_correction=True,
+                      random_subtraction=True, table_r=table_r[mask_r])
 
         result = excess_surface_density(table_l[mask_l], **kwargs)
         kwargs['return_table'] = False
